# cpp-design-patterns

./: CMakeLists.txt  singleton_pattern_improved.cpp
Udemy/: CMakeLists.txt
Udemy/SOLID/: CMakeLists.txt
Udemy/SOLID/src/: LSP.cpp  OCP.cpp
Udemy/builder/: CMakeLists.txt
Udemy/builder/src/: Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h  fluent_builder.cpp  groovy_style_builder.cpp  main.cpp  motivation_demo.cpp  motivation_improved_v1.cpp
app/: CMakeLists.txt
app/auth/: CMakeLists.txt
app/auth/include/auth/: AuthManager.h
app/auth/src/: AuthManager.cpp
app/common/: CMakeLists.txt
app/common/include/constants/: Constants.h
app/common/include/types/: Report.h  ReportFormat.h  User.h
app/common/src/types/: Report.cpp  ReportFormat.cpp  User.cpp
app/configs/: CMakeLists.txt
app/configs/include/configs/: StartupConfig.h
app/configs/src/: StartupConfig.cpp
app/configs/test/: CMakeLists.txt  StartupConfig_tests.cpp
app/interfaces/: CMakeLists.txt
app/interfaces/include/interfaces/auth/: IAuthentication.h  IAuthorization.h
app/interfaces/include/interfaces/parsers/: ICredentialsParser.h  IParsersFactory.h  IReportParser.h
app/interfaces/include/parsers/: IReportParser.h
app/parsers/: CMakeLists.txt
app/parsers/include/parsers/: JsonParser.h  ParsersFactory.h  ValidatedReportParser.h  XmlParser.h
app/parsers/src/: JsonParser.cpp  ParsersFactory.cpp  ValidatedReportParser.cpp  ValidatedReportParsers.cpp  XmlParser.cpp
app/parsers/test/: CMakeLists.txt  JsonParser_test.cpp  ValidatedReportParser_tests.cpp  XmlParser_test.cpp
app/servers/: CMakeLists.txt
app/servers/include/servers/: ReportSession.h  Server.h
app/servers/interfaces/services/: ITaxService.h  ITaxServiceFactory.h
app/servers/src/: ReportSession.cpp  Server.cpp
app/services/: CMakeLists.txt
app/services/include/services/: TaxService.h  TaxServiceFactory.h
app/services/src/: TaxService.cpp  TaxServiceFactory.cpp
app/services/tests/: AuthorizationMock.h  CMakeLists.txt  ReportParserMock.h  TaxService_tests.cpp
app/storage/: CMakeLists.txt
app/storage/include/storage/: ReportsStorage.h
app/storage/src/: ReportsStorage.cpp
creational/: abstract_factory.cpp  factory_method.cpp  prototype_pattern.cpp  singleton_pattern.cpp  singleton_pattern_improved.cpp  singleton_pattern_improved_v.cpp
structural/: adapter_pattern.cpp  bridge_pattern.cpp  composite_pattern01.cpp  composite_pattern02.cpp  decorator_pattern.cpp
