project(builder)

#add_executable(motivation src/motivation_demo.cpp)
#add_executable(motivation_v1 src/motivation_improved_v1.cpp)
#add_executable(fluent_builder src/fluent_builder.cpp)
#add_executable(groovy_style_builder src/groovy_style_builder.cpp)
add_executable(builder_facet src/Person.cpp src/PersonBuilder.cpp)